--- a/lib/bald/tests/integration/HTML/array_reference.html
+++ b/lib/bald/tests/integration/HTML/array_reference.html
@@ -174,13 +174,13 @@ Composition = joint.dia.Link.extend({
      return cell;
 };
 
-var child_variable = instance('child_variable:<a xlink:href="http://binary-array-ld.net/latest/Array" xlink:show=new text-decoration="underline">bald__Array</a>, <a xlink:href="http://binary-array-ld.net/latest/Reference" xlink:show=new text-decoration="underline">bald__Reference</a>', ['<a xlink:href="http://binary-array-ld.net/latest/array" xlink:show=new text-decoration="underline">bald__array</a>: |', '<a xlink:href="http://binary-array-ld.net/latest/shape" xlink:show=new text-decoration="underline">bald__shape</a>: 11, 17'], '#878800');
-var parent_variable = instance('parent_variable:<a xlink:href="http://binary-array-ld.net/latest/Array" xlink:show=new text-decoration="underline">bald__Array</a>', ['<a xlink:href="http://binary-array-ld.net/latest/references" xlink:show=new text-decoration="underline">bald__references</a>: |', '<a xlink:href="http://binary-array-ld.net/latest/shape" xlink:show=new text-decoration="underline">bald__shape</a>: 11, 17'], '#878800');
-var root = instance('root:<a xlink:href="http://binary-array-ld.net/latest/Container" xlink:show=new text-decoration="underline">bald__Container</a>', ['<a xlink:href="http://binary-array-ld.net/latest/contains" xlink:show=new text-decoration="underline">bald__contains</a>: |'], '#878800');
-link(child_variable, child_variable, 'bald__array', 'bottom');
-link(parent_variable, child_variable, 'bald__references');
-link(root, child_variable, 'bald__contains', 'top', true);
-link(root, parent_variable, 'bald__contains', 'top', true);
+var file://CDL/array_reference.cdl = instance('file://CDL/array_reference.cdl:<a xlink:href="http://binary-array-ld.net/latest/Container" xlink:show=new text-decoration="underline">bald__Container</a>', ['<a xlink:href="http://binary-array-ld.net/latest/contains" xlink:show=new text-decoration="underline">bald__contains</a>: |'], '#878800');
+var file://CDL/array_reference.cdl/child_variable = instance('file://CDL/array_reference.cdl/child_variable:<a xlink:href="http://binary-array-ld.net/latest/Array" xlink:show=new text-decoration="underline">bald__Array</a>, <a xlink:href="http://binary-array-ld.net/latest/Reference" xlink:show=new text-decoration="underline">bald__Reference</a>', ['<a xlink:href="http://binary-array-ld.net/latest/array" xlink:show=new text-decoration="underline">bald__array</a>: |', '<a xlink:href="http://binary-array-ld.net/latest/shape" xlink:show=new text-decoration="underline">bald__shape</a>: 11, 17'], '#878800');
+var file://CDL/array_reference.cdl/parent_variable = instance('file://CDL/array_reference.cdl/parent_variable:<a xlink:href="http://binary-array-ld.net/latest/Array" xlink:show=new text-decoration="underline">bald__Array</a>', ['<a xlink:href="http://binary-array-ld.net/latest/references" xlink:show=new text-decoration="underline">bald__references</a>: |', '<a xlink:href="http://binary-array-ld.net/latest/shape" xlink:show=new text-decoration="underline">bald__shape</a>: 11, 17'], '#878800');
+link(file://CDL/array_reference.cdl, file://CDL/array_reference.cdl/child_variable, 'bald__contains', 'top', true);
+link(file://CDL/array_reference.cdl, file://CDL/array_reference.cdl/parent_variable, 'bald__contains', 'top', true);
+link(file://CDL/array_reference.cdl/child_variable, file://CDL/array_reference.cdl/child_variable, 'bald__array', 'bottom');
+link(file://CDL/array_reference.cdl/parent_variable, file://CDL/array_reference.cdl/child_variable, 'bald__references');
     joint.layout.DirectedGraph.layout(graph, { setLinkVertices: false,
                                                nodeSep: 150, rankSep: 100,
                                                marginX: 100, marginY: 100,
